--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "webpack": "^5.95.0"
   },
   "dependencies": {
     "material-design-icons": "^3.0.1"
