hw5: исправил Cannot find module 'sass'

--- a/react-chat/package.json
+++ b/react-chat/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://cmbbigis.github.io/2024-2-VK-EDU-Frontend-N-Gavrilov",
   "name": "react-chat",
   "version": "0.1.0",
   "private": true,
@@ -13,7 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "sass": "^1.80.7"
   },
   "scripts": {
     "start": "react-scripts start",
