--- a/react-chat/package.json
+++ b/react-chat/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://cmbbigis.github.io/2024-2-VK-EDU-Frontend-N-Gavrilov",
+  "homepage": "https://cmbbigis.github.io/",
   "name": "react-chat",
   "version": "0.1.0",
   "private": true,
@@ -13,9 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "sass": "^1.80.7"
+    "sass": "^1.80.7",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
