hw6: поправил homepage

--- a/react-chat/package.json
+++ b/react-chat/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://cmbbigis.github.io/",
+  "homepage": "https://cmbbigis.github.io/2024-2-VK-EDU-Frontend-N-Gavrilov/",
   "name": "react-chat",
   "version": "0.1.0",
   "private": true,
