--- a/react-chat/package.json
+++ b/react-chat/package.json
@@ -17,6 +17,7 @@
     "husky": "^9.1.7",
     "leaflet": "^1.9.4",
     "lint-staged": "^15.2.11",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
@@ -32,7 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "lint": "eslint . --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -57,5 +58,9 @@
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.14.0"
+  },
+  "lint-staged": {
+    "*.js": "eslint . --fix",
+    "*.jsx": "eslint . --fix"
   }
 }
