--- a/react-chat/package.json
+++ b/react-chat/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/jest": "^29.5.14",
+    "@types/react-toastify": "^4.1.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.14.0",
