--- a/react-chat/package.json
+++ b/react-chat/package.json
@@ -55,9 +55,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/jest": "^29.5.14",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
-    "globals": "^15.14.0"
+    "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5"
   },
   "lint-staged": {
     "*.js": "eslint . --fix",
