--- a/exam/package.json
+++ b/exam/package.json
@@ -15,15 +15,18 @@
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "jest": "^29.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.0",
     "react-router-dom": "^7.1.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "ts-jest": "^29.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
